fix(forms): Don't show spinner arrows in number input fields on Firefox

--- a/install/css/install.css
+++ b/install/css/install.css
@@ -191,6 +191,10 @@ input[type="url"] {
 	width: 100%;
 }
 
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+
 input[type="password"]:focus,
 input[type="text"]:focus,
 input[type="number"]:focus,
